force-app/main/default/objects/Account/fields/Arizona_State_Bar_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Arizona_State_Bar_License_Number__c</fullName>
    <label>Arizona State Bar License Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>