force-app/main/default/objects/Account/fields/Date_Business_Formed__c.field-meta.xml
<CustomField>
    <fullName>Date_Business_Formed__c</fullName>
    <label>Date Business Formed</label>
    <type>Date</type>
</CustomField>