force-app/main/default/objects/Account/fields/DBA_Name_3__c.field-meta.xml
<CustomField>
    <fullName>DBA_Name_3__c</fullName>
    <label>DBA Name 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>