force-app/main/default/objects/Account/fields/Federal_Tax_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_ID_Number__c</fullName>
    <label>Federal Tax ID Number</label>
    <length>25</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>