force-app/main/default/objects/Account/fields/Has_Right_to_Decision_Making__c.field-meta.xml
<CustomField>
    <fullName>Has_Right_to_Decision_Making__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Right to Decision Making</label>
    <type>Checkbox</type>
</CustomField>