force-app/main/default/objects/Account/fields/List_ALL_assumed_DBA_s_or_trade_names__c.field-meta.xml
<CustomField>
    <fullName>List_ALL_assumed_DBA_s_or_trade_names__c</fullName>
    <label>List ALL assumed, DBA&apos;s, or trade names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>