force-app/main/default/objects/Account/fields/List_all_directors_et_al_of_Authorized__c.field-meta.xml
<CustomField>
    <fullName>List_all_directors_et_al_of_Authorized__c</fullName>
    <label>List all directors, et al, of Authorized</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>