force-app/main/default/objects/Account/fields/List_Name_of_Business__c.field-meta.xml
<CustomField>
    <fullName>List_Name_of_Business__c</fullName>
    <label>List Name of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>