force-app/main/default/objects/Account/fields/Pending_Admission_Date__c.field-meta.xml
<CustomField>
    <fullName>Pending_Admission_Date__c</fullName>
    <label>Pending Admission Date</label>
    <type>Date</type>
</CustomField>