force-app/main/default/objects/Account/fields/Previously_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Previously_Submitted_Date__c</fullName>
    <label>Previously Submitted Date</label>
    <type>Date</type>
</CustomField>