force-app/main/default/objects/Account/recordTypes/ABS_Entity.recordType-meta.xml
<RecordType>
    <fullName>ABS_Entity</fullName>
    <active>true</active>
    <label>ABS Entity</label>
</RecordType>